examples/cymbal-bank/3-fleetscope/config-sync/development/cymbal-bank-network-policies-development.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cymbal-bank-isolation
  annotations:
    configmanagement.gke.io/namespace-selector: accounts-selector
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - cb-accounts-development
                  - cb-frontend-development
                  - cb-ledger-development
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cymbal-bank-isolation
  annotations:
    configmanagement.gke.io/namespace-selector: ledger-selector
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - cb-accounts-development
                  - cb-frontend-development
                  - cb-ledger-development
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cymbal-bank-isolation
  annotations:
    configmanagement.gke.io/namespace-selector: frontend-selector
spec:
  podSelector: {}
  ingress:
  - {}
  egress:
  - {}
  policyTypes:
  - Egress
  - Ingress
